# blackshark-linux

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: audit.yml  ci.yml  release.yml
crates/blackshark-client/: Cargo.toml
crates/blackshark-client/src/: lib.rs
crates/blackshark-ctl/: Cargo.toml
crates/blackshark-ctl/src/: main.rs  proxy.rs
crates/blackshark-gui/: Cargo.toml
crates/blackshark-gui/src/: main.rs  pipewire.rs  proxy.rs
crates/blackshark-gui/ui/: main.slint
crates/blackshark-tray/: Cargo.toml
crates/blackshark-tray/src/: main.rs
crates/blacksharkd/: Cargo.toml
crates/blacksharkd/src/: config.rs  dbus.rs  hid_actor.rs  main.rs  pipewire.rs  state.rs
crates/device/src/: lib.rs
crates/protocol/src/: lib.rs
pkg/: 99-blackshark.rules  blacksharkd.service
src/: battery.rs  device.rs  main.rs  protocol.rs
