[package]
name = "blackshark-tray"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blackshark-tray"
path = "src/main.rs"

[dependencies]
blackshark-client = { path = "../blackshark-client" }
anyhow = "1"
ksni = "0.2"
zbus = { version = "4", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread", "sync"] }
futures-util = "0.3"
